[tool.poetry]
name = "Raphlit"
version = "0.1.0"
description = "A bundle of Streamlit widgets for visualization and chatbots."
authors = ["Raph <raph.nyn@gmail.com>"]
license = "MIT"
packages = [{ include = "raphlit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = ">=2.7.4,<3.0.0"
streamlit = ">=1.42.2,<2.0.0"
networkx = ">=3.4.2,<4.0.0"
streamlit-plotly-events = ">=0.0.6,<0.0.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
